# print-bridge

./: .gitignore  .oxfmtrc.json  Cargo.toml  LICENSE  README.md  README_en.md  THIRD_PARTY_NOTICES.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  printbridge.key.pub  vite.config.ts
.github/workflows/: openwiki-update.yml  pr-checks.yml  publish-apt.yml  publish-rpm.yml  release.yml  sync-release-notes.yml  update-homebrew.yml
.husky/: commit-msg
apps/desktop/: .oxlintrc.json  components.json  package.json  vite.config.ts
apps/desktop/packaging/deb/: control
apps/desktop/packaging/rpm/: metadata
apps/desktop/src/: App.vue  api.ts  i18n.ts  types.ts  updater.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/src/: cli.rs  cli_main.rs  commands.rs  lib.rs  main.rs  product_cli.rs  tray.rs
apps/desktop/src-tauri/src/cli_integration/: linux.rs  macos.rs  mod.rs  unix_link.rs  windows.rs
apps/desktop/src-tauri/tests/: protocol_tests.rs  remote_protocol_tests.rs  remote_store_tests.rs  remote_worker_tests.rs  runtime_contract_tests.rs
apps/desktop/src-tauri/tests/fixtures/html/: public-assets.html
apps/desktop/src/components/: CliIntegrationRow.test.ts  CliIntegrationRow.vue
apps/desktop/src/components/ui/alert/: AlertTitle.vue
apps/desktop/src/components/ui/select/: SelectTrigger.vue
apps/desktop/src/components/ui/table/: TableHead.vue  utils.ts
apps/desktop/src/components/ui/tabs/: TabsList.vue  TabsTrigger.vue
apps/server/: Cargo.toml
apps/server/packaging/deb/: control  postinst  postrm  prerm
apps/server/packaging/rpm/: print-bridge.spec
apps/server/packaging/systemd/: print-bridge.service
apps/server/src/: dependencies.rs  main.rs  parser.rs  paths.rs  readiness.rs  signals.rs
apps/server/tests/: package_metadata_tests.rs  systemd_tests.rs
crates/cli/: Cargo.toml
crates/cli/src/: client.rs  command.rs  config_transfer.rs  interaction.rs  lib.rs  output.rs  parser.rs  policy.rs  product.rs  service.rs
crates/cli/tests/: command_policy_tests.rs  config_cli_tests.rs  parser_tests.rs  service_tests.rs
crates/core/: Cargo.toml
crates/core/src/: activity.rs  config.rs  ip_whitelist.rs  lib.rs  printing.rs  queue.rs
crates/core/tests/: public_api_tests.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: agent.rs  agent_guard.rs  builder.rs  command_executor.rs  doctor.rs  lib.rs  logs.rs  office.rs  queue.rs  remote_worker.rs  server.rs  state.rs  task_history.rs  test_print.rs
crates/runtime/src/html/: browser.rs  proxy.rs
crates/runtime/src/ipc/: mod.rs  unix.rs  windows.rs
crates/runtime/src/office/: windows.rs
crates/runtime/src/printing/: cups.rs  mod.rs  windows.rs
crates/runtime/tests/: command_executor_tests.rs  ipc_tests.rs  lifecycle_tests.rs
docs/: printbridge-technical.md  printbridge-technical_en.md
docs/superpowers/specs/: 2026-07-05-test-print-calibration-page-design.md
examples/config-transfer/go/: config_transfer.go  go.mod
examples/config-transfer/node/: config-transfer.mjs  package-lock.json  package.json
examples/config-transfer/php/: config_transfer.php
examples/remote-task/: README.md
examples/remote-task/go/: remote-task-server.go
examples/remote-task/node/: remote-task-server.mjs
examples/remote-task/php/: remote-task-server.php
fixtures/print/: README.md
openwiki/: .last-update.json  INSTRUCTIONS.md  quickstart.md  source-map.md
openwiki/architecture/: overview.md  protocol.md
openwiki/domain/: configuration.md  security.md
openwiki/operations/: deployment.md
openwiki/workflows/: printing-pipeline.md  remote-polling.md
scripts/: apt-repository.test.mjs  build-apt-repository.sh  build-rpm-repository.sh  build-server-packages.sh  patch-updater-json.mjs  patch-updater-json.test.mjs  prepare-windows-cli.mjs  prepare-windows-cli.test.mjs  release-version.mjs  release-version.test.mjs  release.mjs  release.test.mjs  rpm-repository.test.mjs  update-homebrew-cask.mjs  update-homebrew-cask.test.mjs  upload-apt-repository.sh  upload-rpm-repository.sh  verify-config-transfer-examples.mjs
src/: App.vue  api.ts  i18n.ts  main.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_guard.rs  app_state.rs  cli.rs  commands.rs  config.rs  config_transfer.rs  document.rs  download.rs  lib.rs  logs.rs  main.rs  office.rs  protocol.rs  queue.rs  remote_client.rs  remote_protocol.rs  remote_store.rs  remote_worker.rs  runtime.rs  server.rs  service_manager.rs  task_history.rs  test_print.rs  tray.rs
src-tauri/src/html/: browser.rs  mod.rs  proxy.rs  resource_policy.rs
src-tauri/src/office/: libreoffice.rs
src-tauri/src/printing/: cups.rs  macos.rs  mod.rs  windows.rs
src-tauri/tests/: config_tests.rs  document_tests.rs  html_render_tests.rs  protocol_tests.rs  queue_tests.rs  remote_client_tests.rs  remote_protocol_tests.rs  remote_worker_tests.rs
src/components/ui/alert/: Alert.vue  AlertDescription.vue  index.ts
src/components/ui/input/: Input.vue
src/components/ui/scroll-area/: ScrollArea.vue
src/components/ui/select/: SelectContent.vue  SelectItem.vue  SelectScrollDownButton.vue  SelectScrollUpButton.vue
src/components/ui/switch/: Switch.vue
src/components/ui/table/: TableCell.vue
src/components/ui/textarea/: Textarea.vue
src/styles/: globals.css
tools/sumatra/: README.md
