[package]
name = "print-bridge"
version = "0.1.0"
description = "Local printing bridge for trusted Web pages."
authors = ["Vergil Lai"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "print_bridge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22.1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time", "process"] }
axum = { version = "0.8.9", features = ["ws", "json"] }
tower-http = { version = "0.7.0", features = ["cors", "trace"] }
futures-util = "0.3.32"
reqwest = { version = "0.13.4", features = ["rustls", "stream", "json"] }
url = "2.5.8"
thiserror = "2.0.18"
time = { version = "0.3.53", features = ["formatting", "macros"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }
mime_guess = "2.0.5"
image = "0.25.10"
printpdf = { version = "0.9.1", features = ["images"] }
tauri-plugin-process = "2"
tauri-plugin-log = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
