[package]
name = "print-bridge"
version = "0.1.5"
description = "Local printing bridge for trusted Web pages."
authors = ["Vergil Lai"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "print_bridge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22.1"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time", "process", "signal", "io-util"] }
axum = { version = "0.8.9", features = ["ws", "json"] }
tower-http = { version = "0.7.0", features = ["cors", "trace"] }
futures-util = "0.3.32"
reqwest = { version = "0.13.4", features = ["rustls", "stream", "json"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
url = "2.5.8"
thiserror = "2.0.18"
time = { version = "0.3.53", features = ["formatting", "macros"] }
uuid = { version = "1.23.4", features = ["v4", "serde"] }
mime_guess = "2.0.5"
image = "0.25.10"
ipnet = "2"
printpdf = { version = "0.9.1", features = ["images"] }
zip = "4.6.1"
tauri-plugin-process = "2"
tauri-plugin-log = "2"
zeroize = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.61"
features = [
  "Win32_Foundation",
  "Win32_Graphics_Printing",
]

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
