[package]
name = "print-bridge-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Headless PrintBridge Agent for Linux"

[[bin]]
name = "print-bridge"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
print-bridge-cli = { path = "../../crates/cli" }
print-bridge-runtime = { path = "../../crates/runtime" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }

[dev-dependencies]
tempfile = "3"
