[package]
name = "print-bridge-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
async-trait = "0.1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
print-bridge-core = { path = "../core" }
rand = "0.8"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["net", "io-util", "time"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "net", "io-util", "time"] }
