[package]
name = "print-bridge-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
base64 = "0.22.1"
ipnet = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2.5.8"

[dev-dependencies]
uuid = { version = "1.23.4", features = ["v4"] }
