[package]
name = "print-bridge-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait = "0.1"
print-bridge-cli = { path = "../cli" }
print-bridge-core = { path = "../core" }
axum = { version = "0.8.9", features = ["ws", "json"] }
base64 = "0.22.1"
bytes = "1"
futures-util = "0.3.32"
headless_chrome = { version = "1.0.22", default-features = false, features = ["offline"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
image = "0.25.10"
ipnet = "2"
log = "0.4"
mime_guess = "2.0.5"
printpdf = { version = "0.9.1", features = ["images"] }
reqwest = { version = "0.13.4", features = ["rustls", "stream", "json"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2.0.18"
time = { version = "0.3.53", features = ["formatting", "macros"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time", "process", "signal", "net", "io-util"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
url = "2.5.8"
uuid = { version = "1.23.4", features = ["v4", "serde"] }
zeroize = "1"
zip = "4.6.1"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.61"
features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Graphics_Printing"]

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
